# AI-SPRINT-STUDIO

./: README.md  setup.cfg
application_template/: cookiecutter.json
application_template/{{cookiecutter.application_name}}/common_config/: application_dag.yaml
docker/: Dockerfile  requirements-space4ai.txt  requirements.txt
docker-base-app/: Dockerfile
examples/filter_classifier_degraded_performance/common_config/: application_dag.yaml  candidate_deployments.yaml
examples/filter_classifier_degraded_performance/space4ai-r/: deployments_performance.yaml
examples/filter_classifier_early_exits/common_config/: application_dag.yaml  candidate_deployments.yaml  candidate_resources.yaml
examples/filter_classifier_early_exits/space4ai-d/: SPACE4AI-D.yaml
examples/mask_detection_1_partitionable_local_constraints/common_config/: application_dag.yaml  candidate_deployments.yaml  candidate_resources.yaml
examples/mask_detection_1_partitionable_local_constraints/space4ai-d/: SPACE4AI-D.yaml
examples/mask_detection_2_partitionable_global_constraint/common_config/: application_dag.yaml  candidate_deployments.yaml
examples/mask_detection_2_partitionable_global_constraint/space4ai-d/: SPACE4AI-D.yaml
examples/mask_detection_3_components_4CL/common_config/: application_dag.yaml  candidate_deployments.yaml  candidate_resources.yaml
examples/mask_detection_3_components_4CL/oscarp/: components_data_size.yaml  performance_models.json
src/aisprint/: __init__.py  annotations_parsing.py  application_preprocessing.py  design.py  utils.py
(+78 files in other folders)
