[metadata]
name = aisprint
author = Unknown
author-email = Unknown
description = Unknown
long_description = file: README.md
keywords = Unknown1, Unknown2
license = Unknown
classifiers =
    Programming Language :: Python :: 3


[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

include_package_data = True
[options.package_data]
aisprint.application_template = application_template.zip
aisprint.drift_detector = drift_detector.zip

[options.entry_points]
console_scripts =
    aisprint = aisprint.bin.aisprint_cli:aisprint_cli